--- a/Page6.html
+++ b/Page6.html
@@ -45,8 +45,9 @@
                 reality warping abillities. Unfortunetly this is the only known way<br>
                 to depicit the godess as all icons of her rendered in other ways<br>
                 collapse the canvas into a temporary null sphere.<br>
-                <a href="Expansion"><span style="color: black;"> Glugglug is way to pretentious but at least her art pieces are valuable investments</span></a>
+                <a href="Expansion.html"><span style="color: black;"> Glugglug is way to pretentious but at least her art pieces are valuable investments</span></a>
                 
             </h4>
+
 
          </div>
