--- a/Page4.html
+++ b/Page4.html
@@ -29,4 +29,5 @@
                 member that vanquished <span style="color: crimson;">V</span>ecna. That's right! Our very own J. Smith was there the whole time, bet your history books won't mention that!
             </h4>
         </div>
-        <div class="item-4"> <a href="The_Gnashing"><img src="Images/James-Smith.jfif" width="100"></a> <h4 style="font-size: smaller;">Wow he certainly is awesome right? &nbsp&nbsp&nbsp </h4></div>
+
+        <div class="item-4"> <a href="The_Gnashing.html"><img src="Images/James-Smith.jfif" width="100"></a> <h4 style="font-size: smaller;">Wow he certainly is awesome right? &nbsp&nbsp&nbsp </h4></div>
