--- a/Commercials2.html
+++ b/Commercials2.html
@@ -11,4 +11,5 @@
            <h4><a href="Page6.html" title="Page 6"> Previous Page</a></h4> <h4><a href="Quickreference.html" title="Quick Reference"> Next Page</a></h4>
         </div>
 
-        <div class="flex-square"> <a href="Buisness"><img src="Images/Deadicare2.png" width="800"></a><img src="Images/Battle.tested.weapons.png" width="800"></div>
+
+        <div class="flex-square"> <a href="Buisness.html"><img src="Images/Deadicare2.png" width="800"></a><img src="Images/Battle.tested.weapons.png" width="800"></div>
