--- a/Buisness.html
+++ b/Buisness.html
@@ -7,8 +7,9 @@
     <h4>Yes, yes, what I'm saying is: Production is expensive, so why should we shoulder that? ...mhm... mhm... Exactly so we grab it from them when they're dead and then we just resell it! Brand it, ''battle tested'' they'll eat that shit up. Matter of fact?
         they don't even gotta be dead, just grab it from them when they can't fight back... Oh, oh and how are they gonna do that? They don't even have a weapon anymore... and who do they buy that from? Us. Again. Double profit. This is why I'm the boss and you're
         just a guy I hired. Alright patent it, wrap it and ship it, we're opening up in Peluvia first, they got soooo many dead guys there haha. In fact I think they owe me, they wouldn't even exist without me, besides after the whole Nyra and the Sword song
-        went platinum no one even wants to grave rob over there anymore, so should be plenty of unlooted graves. Oh and gkpi, I'm putting all the finacial burden on you if someone tries to sue... What? That's not your name? ... huh wonder where i got it from then... 
+        went platinum no one even wants to grave rob over there anymore, so should be plenty of unlooted graves. Oh and KT, I'm putting all the finacial burden on you if someone tries to sue... What? That's not your name? ... huh wonder where i got it from then... 
     </h4>
 
 
 </html>
+
