--- a/Expansion.html
+++ b/Expansion.html
@@ -8,8 +8,9 @@
         perspective after all. It's also really nice being free of that sword, or I guess I'm not exactly free but I have a lot more freedom thats a better way to put it. Besides I still get to do my favorite thing, bringing order to savages, wether they want it
         or not.<br><br>Signed<br>
 
-        Your boy, Vice President - <span style="color: yellow;">KT</span>
+        Your boy, Vice President - Kas, aka <span style="color: yellow;">GKPI</span>
     </h4>
 
 
 </html>
+
