--- a/Page1.html
+++ b/Page1.html
@@ -11,7 +11,7 @@
         <div class="header">
             
            <h1>El Dorado<h1>
-            <h4><a href="Frontpage.html" title="Front page"> Previous page </a> <span style="margin-left: 800px"> &nbsp &nbsp </span><span style="margin-right: 800px"> &nbsp &nbsp </span><a href="Page2.html" title="Page 2"> Next page </a></h4>
+            <h4><a href="index.html" title="Front page"> Previous page </a> <span style="margin-left: 800px"> &nbsp &nbsp </span><span style="margin-right: 800px"> &nbsp &nbsp </span><a href="Page2.html" title="Page 2"> Next page </a></h4>
             <h2></h2>
          </div>
 
@@ -40,4 +40,5 @@
          </div>
 
    </body>
+
 </html>
