--- a/Page2.html
+++ b/Page2.html
@@ -29,7 +29,7 @@
             or bc equivalent for this power house. Throw in an extra 500g and you get a box of Carver ammunition with your purchase and we'll even throw in a little Marlbarrow pack for free. Now that's a deal</h4> 
          </div>
          <div class="item-3">
-            <h4 style="font-size: larger;"> <span style="font-size: x-large;"><span style="color: crimson;">S</span>pringshield 873 & Imperial Repeater - The frugal cowboys choice</span> <br>That's all well and good but as always Smith & Westwood likes to serve all customers, so what's on the market for right now for a gunslinger out west just looking for a high powered rifle?<br>
+            <h4 style="font-size: larger;"> <span style="font-size: x-large;">Spring<span style="color: crimson;">s</span>hield 873 & Imperial Repeater - The frugal cowboys choice</span> <br>That's all well and good but as always Smith & Westwood likes to serve all customers, so what's on the market for right now for a gunslinger out west just looking for a high powered rifle?<br>
             I'm glad you asked, see if you're not looking to take on natures most naturally armored creatures then you won't need more than the good ol' .308 bullet, and maybe .30-06. Now the difference <br> is some handling and some power between
             the two but mostly negligible, refer to the backside of this magazine for some ammunition breakdowns. The main differences are of course the rifles<br> themselves. For the .30-06, the more powerful of the two options you're looking at something like
             the Springshield 873, a bolt action rifle that will kick your shoulder out if you let it. Its got a<br> solid 5 bullet capacity and a scores 2d10s of dmg. It's not gonna offer you any sight advantages unless you buy extra but it will function well up to 200ft and works
@@ -44,4 +44,5 @@
             <h4>Springshield 873<br>blueprint</h4>
             
          </div>
+
     </body>
