--- a/Page3.html
+++ b/Page3.html
@@ -39,6 +39,7 @@
 
          <div class="item-4">
             <img src="Images/ildshowl.jpeg" width="100">
-            <h4>Picutred to the right is Ild's Howl, the weapon of legend that is clearly cloaked in red and orange and not green and doesn't even have a gun attatched to it&nbsp&nbsp<br>So you can't sue us <span style="color: crimson;">Z</span>onk Estate /J. Smith</h4>
+            <h4>Picutred to the right is Ild's Howl, the weapon of legend that is clearly cloaked in red and orange and not green and doesn't even have a gun attatched to it&nbsp&nbsp<br>So you can't sue us <span style="color: crimson;">z</span>onk Estate /J. Smith</h4>
+
 
          </div>
