--- a/Page4.html
+++ b/Page4.html
@@ -26,8 +26,9 @@
             which of course and Smith & Westwood licensed store will be able to help you with. So if you're looking to buy the PPA 12g, you'll be looking at about 500g, while a normal NC double barreled will only cost around 30g. </h4>
             <img src="Images/peluvpumpact.png">
             <h4>A little history for those that are interested, while most OF you are probably familiar with the legendary heroes Zonk, Bruma, Günther, Galaereon and of course or very own Saint Shell, there was actually a secret sixth
-                member that vanquished <span style="color: crimson;">V</span>ecna. That's right! Our very own J. Smith was there the whole time, bet your history books won't mention that!
+                member that vanquished <span style="color: crimson;">v</span>ecna. That's right! Our very own J. Smith was there the whole time, bet your history books won't mention that!
             </h4>
         </div>
 
         <div class="item-4"> <a href="The_Gnashing.html"><img src="Images/James-Smith.jfif" width="100"></a> <h4 style="font-size: smaller;">Wow he certainly is awesome right? &nbsp&nbsp&nbsp </h4></div>
+
