--- a/Theearn.html
+++ b/Theearn.html
@@ -4,11 +4,14 @@
     <link rel="stylesheet" href="style.css"></link>
     <title>Hello</title>
 
-    <h4>Wow, you made it all the way here. I didn't think anyone would. It's pretty obscure and all. But a reward is waiting for you, don't you worry about that. Nurturing talent is good for buisness. Now to end this, two clues that you'll need.<br>
-        An organism living in symbiosis with another is called?<br>
-        What is the current year?<br>
+    <h4>Wow, you made it all the way here. I didn't think anyone would. It's pretty obscure and all. But a reward is waiting for you, don't you worry about that. Nurturing talent is good for buisness. Now to solve this final part you'll need these two answers<br>
+        1: An organism living in symbiosis with another is called?<br>
+        2: What is the current year?<br>
+        <br>
+        <br>
         Find the 7 words. Answer the final question. Provide me with the answer and you'll have your reward.
     </h4>
 
 
 </html>
+
