--- a/Theearn.html
+++ b/Theearn.html
@@ -9,9 +9,10 @@
         2: What is the current year?<br>
         <br>
         <br>
-        Find the 7 words. Answer the final question. Provide me with the answer and you'll have your reward.
+        Find the 7 words. Answer the final question. Provide me with the answer and you'll have your reward. Oh and I'd be remiss not to mention, the more of you that complete this, the greater the reward. But if I suspect foul play even just a hint, you get nothing. You'll all have to this on your own. Good luck.
     </h4>
 
 
 </html>
+
 
